--- a/index.Rmd
+++ b/index.Rmd
@@ -18,15 +18,12 @@ knitr::opts_chunk$set(
 library(glue)
 library(tidyverse)
 
-# Set this to true to have links turned into footnotes at the end of the document
 PDF_EXPORT <- TRUE
 
-# Holds all the links that were inserted for placement at the end
 links <- c()
 
 source('parsing_functions.R')
 
-# Load csv with position info
 position_data <- readxl::read_xlsx('positions.xlsx')
 ```
 
@@ -64,7 +61,7 @@ Contact {#contact}
 -  [christoph@tidy-intelligence.com](christoph@tidy-intelligence.com)
 - <i class="fa fa-github"></i> [christophscheuch](https://github.com/christophscheuch)
 - <i class="fa fa-linkedin"></i> [christophscheuch](https://www.linkedin.com/in/christophscheuch/)
-- <i class="fa fa-link"></i> [christophscheuch.github.io](https://christophscheuch.github.io/)
+- <i class="fa fa-link"></i> [tidy-intelligence.com](https://www.tidy-intelligence.com/)
 
 Skills {#skills}
 --------------------------------------------------------------------------------
@@ -97,7 +94,7 @@ Christoph Scheuch {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-intro_text <- "I am an independent data science and business intelligence expert with a passion for all topics surrounding finance and data.
+intro_text <- "I’m a trained financial economist and former product and data science leader with a passion for tidy data and efficient workflows. I help organizations build sustainable data practices that spark joy among team members and stakeholders.
 
 I previously served as the Head of Artificial Intelligence, Director of Product, and the Head of Business Intelligence & Data Science at wikifolio. Before I joined wikifolio, I received my PhD from the Vienna Graduate School of Finance with a research focus on the economics of new financial technologies and big data analysis."
 
